RESOLVED FIXED 53921
[Qt] fast/dom/nodesFromRect-links-and-text.html crashes in debug mode
https://bugs.webkit.org/show_bug.cgi?id=53921
Summary [Qt] fast/dom/nodesFromRect-links-and-text.html crashes in debug mode
Csaba Osztrogonác
Reported 2011-02-07 09:24:20 PST
Created attachment 81480 [details] GDB backtrace in debug mode (r53488) fast/dom/nodesFromRect-links-and-text.html crashes in debug mode because of an assertion. (long long time ago) GDB backtrace: <attached> (r53488)
Attachments
GDB backtrace in debug mode (r53488) (8.88 KB, text/plain)
2011-02-07 09:24 PST, Csaba Osztrogonác
no flags
Patch (3.04 KB, patch)
2011-02-08 11:44 PST, Robert Hogan
no flags
Antonio Gomes
Comment 1 2011-02-07 09:30:07 PST
Robert, it sounds related to your change.
Csaba Osztrogonác
Comment 2 2011-02-07 09:33:05 PST
(In reply to comment #1) > Robert, it sounds related to your change. Yes. I got it, it crashed from http://trac.webkit.org/changeset/75189 .
Robert Hogan
Comment 3 2011-02-08 11:44:25 PST
Robert Hogan
Comment 4 2011-02-08 11:45:28 PST
(In reply to comment #1) > Robert, it sounds related to your change. Yes siree, missed the copy constructor for QDRTNode. QVariant uses it.
Antonio Gomes
Comment 5 2011-02-08 13:09:44 PST
Comment on attachment 81671 [details] Patch Do you need to upskip a tesT?
Csaba Osztrogonác
Comment 6 2011-02-09 03:12:29 PST
(In reply to comment #5) > (From update of attachment 81671 [details]) > Do you need to upskip a tesT? No, fast/dom/nodesFromRect-links-and-text.html isn't on the Skipped list, it caused assertion only on the debug bot.
Csaba Osztrogonác
Comment 7 2011-02-09 03:21:24 PST
Landed in http://trac.webkit.org/changeset/78038 . Thanks for the quick fix.
Note You need to log in before you can comment on or make changes to this bug.