[Qt] fast/dom/nodesFromRect-links-and-text.html crashes in debug mode https://bugs.webkit.org/show_bug.cgi?id=53921

Patch by Robert Hogan <robert@webkit.org> on 2011-02-09
Reviewed by Antonio Gomes.

QDRTNode needs a copy constructor and an operator= in order to keep
proper refcounts.

* WebCoreSupport/DumpRenderTreeSupportQt.cpp:
(:m_node):
(QDRTNode::operator=):
(DumpRenderTreeSupportQt::nodesFromRect):
* WebCoreSupport/DumpRenderTreeSupportQt.h:

Canonical link: https://commits.webkit.org/68095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78038 268f45cc-cd09-0410-ab3c-d52691b4dbfc